--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "scripts": {
     "start": "NODE_ENV=production node ./server/bin/www",
-    "w:d": "NODE_ENV=development babel-watch ./server/bin/www",
-    "clean": "rimraf dist-server",
-    "b:s": "npm run clean && babel ./server --out-dir dist-server --copy-files"
+    "w:d": "NODE_ENV=development babel-watch --watch ./server/views ./server/bin/www",
+    "cleanc": "rimraf dist-server",
+    "b:s": "npm run clean && babel ./server --out-dir dist-server --copy-files",
+    "w:s": "NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
+    "b:c": "npm run cleac && webpack --config ./webpack.config.js --mode production",
+    "build": "npm run b:c && npn run b:S"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -22,8 +25,19 @@
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-minify": "^0.5.1",
-    "babel-watch": "^7.6.0"
+    "babel-watch": "^7.6.0",
+    "css-loader": "^6.5.1",
+    "eslint": "^7.26.0",
+    "eslint-webpack-plugin": "^3.0.1",
+    "mini-css-extract-plugin": "^2.4.4",
+    "webpack": "^5.63.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-dev-server": "^4.4.0",
+    "webpack-hot-middleware": "^2.25.1"
   }
 }
