--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,10 @@
 {
     "parser": "babel-eslint",
-    "extends": ["eslint:recommended"],
-    "rules":{},
+    "extends": ["eslint:recommended","prettier"],
+    "plugins":["prettier"],
+    "rules":{
+        "prettier/prettier":["error"]
+    },
     "env": {
         "browser": true,
         "es6": true,
