--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node ./server/bin/www",
-    "dev": "NODE_ENV=development babel-watch --watch ./server/views ./server/bin/www",
+    "start": "cross-env NODE_ENV=production node ./server/bin/www",
+    "dev": "cross-env NODE_ENV=development babel-watch --watch ./server/views ./server/bin/www",
     "cleanc": "rimraf dist-server",
     "b:s": "npm run clean && babel ./server --out-dir dist-server --copy-files",
     "w:s": "NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
@@ -12,13 +12,21 @@
     "build": "npm run b:c && npn run b:S"
   },
   "dependencies": {
+    "babel-loader": "^8.2.3",
     "cookie-parser": "~1.4.4",
+    "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mini-css-extract-plugin": "^2.4.4",
     "morgan": "~1.9.1",
-    "rimraf": "^3.0.2"
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "run": "^1.4.0",
+    "webpack": "^5.63.0",
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-hot-middleware": "^2.25.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
@@ -26,18 +34,21 @@
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.3",
+
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-minify": "^0.5.1",
     "babel-watch": "^7.6.0",
     "css-loader": "^6.5.1",
-    "eslint": "^7.26.0",
+    "core-js": "^3.19.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.0.1",
-    "mini-css-extract-plugin": "^2.4.4",
     "webpack": "^5.63.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-middleware": "^5.2.1",
-    "webpack-dev-server": "^4.4.0",
-    "webpack-hot-middleware": "^2.25.1"
+    "webpack-dev-server": "^4.4.0"
+
   }
 }
